# LLM

./: .example.env  .gitignore  README.md  corpus.py  pyproject.toml  requirements.txt  shell.nix  slop_emit.patch
config/: config.xml
configs/: tiny.yaml
distill/: __main__.py  cli.py  extraction.py  io_jsonl.py  mixture.py  schemas.py  teacher_vocab.py
examples/: config.example.xml  config.hf.example.xml
llm_lab/: __init__.py  registry.py  typing.py
rewrite/: __init__.py  dataloader.py  main_model.py  patcher_embedded_config.py  patcher_models.py  sample_main.py  train_main.py  train_patcher.py  train_patcher2.py  train_slot_conv_patcher.py  validate_patcher.py  validate_patcher2.py
scripts/: benchmark_ademamix_backends.py  clean_artifacts.py  compare_cache.py  compare_precomputed_vs_online.py  precompute_patches.py  prepare_data.py  prepare_data_patcher2.py  prepare_data_tiny.py  sample.py  sample_tiny.py  train.py  train_patcher.py  train_patcher2.py  train_tiny.py  validate_jsonl_ingest.py
tests/: probe_nnv5_ceiling.py  test.bash  test_ademamix_fused.py  test_app_smoke.py  test_boundaries.py  test_config_loading.py  test_distill_runtime.py  test_distill_skeleton.py  test_forward_smoke.py  test_jsonl_text_dataset.py  test_loss_alignment.py  test_nn_layer.py  test_nnv2.py  test_nnv5.py  test_parser.py  test_precompute_parity.py  test_registry.py  test_resolver_validation.py  test_rewrite_batch_adapter.py  test_rewrite_dataloader_export.py  test_shape_validator.py  test_slot_conv_patcher.py  test_synthetic_validation.py  test_train_cli.py  (+4 more)
train/: cli.py  (+8 more)
(+133 files in other folders)
